tests/NormalTests/paczka1/fuzzy1/92443690.err
Error in line 1: 04CMBCuq S546 450,3
Error in line 3: 04CMBCuq S777 9,5
Error in line 13: EHQq4 S546 40,0
Error in line 15: lUOim S488 13,0
Error in line 12: GcZuv S488 3,5
Error in line 19: 04CMBCuq A823 39,5
Error in line 22: GcZuv S777 60,2
Error in line 28: 04CMBCuq S777 93,1
Error in line 37: lUOim S488 53,1
